--- a/app/templates/pwa/index.html
+++ b/app/templates/pwa/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reporte Rural</title>
+    <title>Candi</title>
     <!-- Meta tag para el color de la barra de estado en móviles -->
     <meta name="theme-color" content="#3b5998"/>
     <!-- Enlace al manifiesto de la PWA -->
@@ -15,14 +15,14 @@
 <body>
 
     <header>
-        <h1>Reporte Rural de Fauna</h1>
+        <h1>Registro Voluntario de Simpatizantes</h1>
     </header>
 
     <main id="app">
         <!-- Pantalla de Inicio y Formulario -->
         <div id="pantallaInicio">
-            <h2>Crear Nuevo Reporte</h2>
-            <p>Toma una foto de un animal para iniciar un nuevo reporte.</p>
+            <h2>Nuevo Registro</h2>
+            <p>Toma foto consentida a un Simpatizante.</p>
             <form id="formularioInicial">
                 <label for="telefono">Tu número de teléfono (opcional):</label>
                 <input type="tel" id="telefono" name="telefono" placeholder="Ej: 987654321">
